[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wbx-cpl"
version = "1.2.0"
description = "Commands for Webex Compliance Officers"
readme = "README.md"
authors = [{ name = "Stephane Cohen", email = "stecohen@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Webex", "Control Hub", "Compliance"]
requires-python = ">=3.10"
dependencies = [
  "click==8.1.7",
  "pandas==2.1.4",
  "requests==2.31.0",
]

[project.optional-dependencies]

[project.urls]

[project.scripts]


